# projects

drcom4GDUFS/: Makefile.in  PKGBUILD  README  autogen.sh  config.h.in  configure.ac
drcom4GDUFS/src/: Makefile.am  Makefile.in  drcom.c  drcom.h  main.c  md5_digest.c  udp.c
fiki/: README  fiki  fiki.c
patches/: awesome-xcursor.patch
